--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-image-zoom-viewer",
-  "version": "2.2.26",
+  "name": "feogo-image-zoom-viewer",
+  "version": "0.0.1",
   "description": "react native image viewer,大图浏览",
   "main": "built/index.js",
   "types": "built/index.d.ts",
@@ -10,12 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ascoders/react-native-image-viewer.git"
+    "url": "https://github.com/askday/react-native-image-viewer.git"
   },
   "keywords": [
     "image-viewer"
   ],
-  "author": "ascoders",
+  "author": "ascoders askday",
   "license": "MIT",
   "dependencies": {
     "react-native-image-pan-zoom": "^2.1.9"
